<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/menuFragment"
        android:name="mk.qrmenu.qrmenumanager.main.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/action_menu_to_addEdit"
            app:destination="@id/addEditProductFragment" />

        <action
            android:id="@+id/action_menu_to_qrCode"
            app:destination="@id/qrCodeFragment" />
    </fragment>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="mk.qrmenu.qrmenumanager.main.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/qrCodeFragment"
        android:name="mk.qrmenu.qrmenumanager.main.qr.QrCodeFragment"
        android:label="@string/title_qr_code"
        tools:layout="@layout/fragment_qr_code" />

    <fragment
        android:id="@+id/addEditProductFragment"
        android:name="mk.qrmenu.qrmenumanager.main.addedit.AddEditProductFragment"
        android:label="@string/title_add_product"
        tools:layout="@layout/fragment_add_edit_product">

        <argument
            android:name="productId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>
